--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -126,7 +126,7 @@ $margin-layout: (100% - $width-layout)/2;
 
 
 body {
-    background-color: #f4f4f4;
+    background-color: #d6d5d5;
     font-family     : 'Open Sans Condensed';
     font-weight: 300;
     font-size       : 20px;
@@ -141,12 +141,8 @@ h5 {
     font-family: 'Open Sans Condensed';
 }
 
-h1 {
-    font-size: 50px;
-}
-
-h2 {
-    font-size: 55px;
+h1, h2 {
+    font-size: 40px;
     font-weight: 400;
     text-align: center;
     line-height: 1.2;
@@ -173,18 +169,21 @@ header {
         .logo-box {
             display    : flex;
             align-items: center;
-            width      : 70%;
+            width      : 75%;
 
             .logo-arows {
+                width: 70%;
                 height: 78%;
 
                 img {
+                    max-width: 100%;
                     height: 100%;
+                    object-fit: contain;
                 }
             }
 
             .logo-title {
-                height        : 100%;
+                height        : 150px;
                 display       : flex;
                 flex-direction: row;
                 align-items   : center;
@@ -192,7 +191,7 @@ header {
                 p {
                     font-size  : 50px;
                     color      : #ff0000;
-                    margin-left: 2vh;
+                    margin-left: 10px;
                 }
             }
         }
@@ -233,7 +232,7 @@ header {
     nav {
         height         : 50px;
         padding        : 0 13.5vw;
-        font-size: 25px;
+        font-size: 20px;
         display        : flex;
         justify-content: space-around;
         align-items    : center;
@@ -307,7 +306,7 @@ main {
 
         div {
             height          : 45px;
-            width           : 400px;
+            width           : 90%;
             font-size: 25px;
             background-color: #f4f4f4;
             margin          : 10px 0;
@@ -323,7 +322,7 @@ main {
 }
 
 .company-features {
-    height             : 330px;
+    height             : 260px;
     background-image   : url(../img/background2.png);
     background-repeat  : no-repeat;
     background-position: center;
@@ -336,26 +335,26 @@ main {
         width          : 100%;
         display        : flex;
         flex-direction : row;
-        justify-content: space-around;
+        justify-content: center;
         align-items    : center;
 
         .feature {
             height         : 100%;
-            width          : 33.33%;
+            width          : 25%;
             display        : flex;
             flex-direction : column;
             justify-content: start;
             align-items    : center;
-            padding-top    : 40px;
+            padding-top    : 20px;
 
             img {
-                height: 170px;
+                height: 130px;
             }
 
             p { 
                 margin-top: -10px;
                 text-align: center;
-                font-size: 28px;
+                font-size: 20px;
                 line-height: 1.3;
             }
         }
@@ -389,7 +388,7 @@ main {
 }
 
 .service {
-    height        : 490px;
+    height        : 400px;
     display       : flex;
     flex-direction: column;
     align-items   : center;
@@ -397,7 +396,7 @@ main {
 
     .services {
         height         : 55%;
-        width          : 100%;
+        width          : 75%;
         display        : flex;
         flex-direction : row;
         justify-content: space-around;
@@ -419,8 +418,7 @@ main {
 
 
         .service-item1 {
-            margin-right: 5%;
-            font-size: 38px;
+            font-size: 30px;
             font-weight: 400;
             line-height: 1.3;
 
@@ -447,8 +445,7 @@ main {
         }
 
         .service-item2 {
-            margin-left: 5%;
-            font-size: 38px;
+            font-size: 30px;
             font-weight: 400;
             line-height: 1.3;
 
@@ -476,10 +473,11 @@ main {
 
     .service-consult {
         height          : 60px;
-        width           : 700px;
+        width           : 600px;
         margin-top: 30px;
         text-align      : center;
         background-color: #f4f4f4;
+        border-radius: 5px;
 
         a { 
             display: block;
@@ -541,20 +539,20 @@ main {
         margin-top: 30px;
 
         .form-data {
-            width          : 93%;
+            width          : 70%;
             margin         : 10px auto;
             display        : flex;
             justify-content: space-between;
 
             div {
-                width: 360px;
+                width: 33.33%;
                 display    : flex;
                 align-items: center;
             }
 
             label {
                 display         : inline-block;
-                width           : 120px;
+                width           : 40%;
                 height          : 45px;
                 background-color: #ffffff;
                 border-right    : 5px solid #989898;
@@ -565,21 +563,22 @@ main {
 
             input {
                 display: inline-block;
-                width: 240px;
+                width: 60%;
                 height : 45px;
+                margin-right: 5px;
             }
 
         }
 
         .form-question {
-            width          : 93%;
+            width          : 70%;
             margin         : 30px auto 0 auto;
             display        : flex;
             justify-content: flex-start;
             align-items    : flex-start;
 
             label {
-                width           : 120px;
+                width           : 15%;
                 height          : 45px;
                 background-color: #ffffff;
                 border-right    : 5px solid #989898;
@@ -589,7 +588,7 @@ main {
             }
 
             textarea {
-                width: 1070px;
+                width: 85%;
                 height: 100px;
             }
         }
@@ -614,14 +613,14 @@ main {
             justify-content: space-around;
             align-items    : flex-start;
             padding        : 5% 0 5% 10%;
-            font-size: 32px;
+            font-size: 22px;
             font-weight: 400;
 
             a {
                 color: black;
 
                 img {
-                    margin:10px;
+                    margin: 0 10px 10px 10px;
                 }
             }
 
