--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -479,6 +479,9 @@ main {
                 height: 45px;
                 margin-right: 5px;
             }
+            #mail {
+                margin-right: 0;
+            }
         }
 
         .form-question {
