--- a/app/scss/_preloader.scss
+++ b/app/scss/_preloader.scss
@@ -23,11 +23,13 @@
     margin: 0;
     padding: 0;
     background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .svg-animation-load {
-    position: relative;
-    top: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,11 +40,6 @@ svg {
     width: 90px;
 }
 
-.load-info {
-    position: relative;
-    top: 27%;
-    left: 45%;
-}
 
 @keyframes move-fil0 {
     0%{
