--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -248,5 +248,8 @@
     footer {
         width: 100%;
         margin: 0;
+        .footer-box {
+            padding: 0 20px;
+        }
     }
 }
