--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,8 +1,7 @@
 @import "null";
 @import "preloader";
 @import "fonts";
-
-
+@import "order";
 //Переменные
 
 $width-layout: 80%;
@@ -128,7 +127,7 @@ header {
         align-items: center;
         background: gray;
         background: linear-gradient(to bottom, #535353, #6a6d70);
-        
+
         a {
             color: #ffffff;
             transition: color 0.5s ease;
@@ -162,7 +161,7 @@ main {
     width: 58%;
 }
 
-.preview {
+#preview {
     height: 390px;
     margin-top: 4px;
     background-image: url(../img/city.jpg);
@@ -320,43 +319,48 @@ main {
             color: #727271;
         }
 
-        .service__order {
+        .order {
             height: 65px;
             width: 100%;
             background-color: #e3dfdf;
             margin-top: 45px;
             padding-left: 5px;
             transition: all 0.5s ease;
+            p { 
+                display: block;
+                line-height: 60px;
+                padding-left: 5px;
+            }
+            .order__img-box {
+                position: relative;
+                bottom: 60px;
+                float: right;
+                border-left: 5px solid #ffffff;
+                width: 65px;
+                height: 65px;
+                img {
+                    position: relative;
+                    bottom: 5px;
+                    left: 5px;
+                }
+            }
         }
 
-        .service__order:hover {
+        .order:hover {
             background-color: #f4f4f4;
             margin-top: 35px;
+            cursor: pointer;
         }
 
         .service-item1 {
             font-size: 30px;
             font-weight: 400;
             line-height: 1.3;
-
-            a {
-                display: block;
-                height: 100%;
-                padding-left: 10px;
-                color: #006432;
-                line-height: 60px;
-
-                .service__order__img-box {
-                    float: right;
-                    border-left: 5px solid #ffffff;
-                    width: 65px;
-                    height: 65px;
-
-                    img {
-                        position: relative;
-                        bottom: 5px;
-                        left: 5px;
-                    }
+            height: 100%;
+            padding-left: 10px;
+            .order {
+                p {
+                    color: #006432;
                 }
             }
         }
@@ -365,25 +369,9 @@ main {
             font-size: 30px;
             font-weight: 400;
             line-height: 1.3;
-
-            a {
-                display: block;
-                height: 100%;
-                padding-left: 10px;
-                color: #ff0000;
-                line-height: 60px;
-
-                .service__order__img-box {
-                    float: right;
-                    border-left: 5px solid #ffffff;
-                    width: 65px;
-                    height: 65px;
-
-                    img {
-                        position: relative;
-                        bottom: 5px;
-                        left: 5px;
-                    }
+            .order {
+                p {
+                    color: #ff0000;
                 }
             }
         }
@@ -581,7 +569,6 @@ main {
         }
     }
 }
-
 
 //footer
 
