--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -111,7 +111,7 @@
     main {
         width: 100%;
         margin: 0;
-        .preview {
+        #preview {
             height: auto;
             .preview-filter {
                 padding: 20px;
