--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -290,7 +290,7 @@ main {
         height: 100%;
         padding: 5% 0 0 28%;
 
-        .photo {
+        .director-photo {
             width: 220px;
             height: 330px;
             background-color: #ffed00;
@@ -326,7 +326,7 @@ main {
             margin-top: 45px;
             padding-left: 5px;
             transition: all 0.5s ease;
-            p { 
+            p {
                 display: block;
                 line-height: 60px;
                 padding-left: 5px;
@@ -400,28 +400,39 @@ main {
     height: 520px;
     background-color: #f4f4f4;
     padding-top: 50px;
-
-    .partners-photos {
-        .btn {
-            width: 45px;
-            height: 45px;
-            display: block;
-            border-radius: 50%;
-            background-color: gray;
-        }
-
-        height: 80%;
+    .slider {
+        width: 100%;
+        margin: 0 auto;
+        padding: 0 20px;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        padding: 0 50px;
-
-        .photo {
-            width: 15%;
-            height: 70%;
-            background-color: #ffed00;
-            border: 1px solid black;
+        .partners-photos {
+            position: relative;
+            width: 90%;
+            height: 300px;
+            margin-top: 20px;
+            overflow: hidden;
+            .photo {
+                position: absolute;
+                width: 200px;
+                height: 300px;
+                background-color: #ffed00;
+                border: 1px solid black;
+                transition: all 0.5s ease;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+            .photo:hover {
+                cursor: pointer;
+            }
+        }
+        .arrow-left, .arrow-right {
+            cursor: pointer;
         }
     }
 }
